fixed heights of clusters for alignment

--- a/static/scss/_facultyclusters.scss
+++ b/static/scss/_facultyclusters.scss
@@ -57,25 +57,30 @@
   margin-bottom: 70px;
 }
 
-.cluster-short h3 a {
-  color: #000;
-  font-family: $font-family-sans-serif;
-  font-size: 26px;
-  font-weight: 600;
-  line-height: 28px;
+.cluster-short h3 {
+  height: 70px;
+
+   a {
+    color: #000;
+    font-family: $font-family-sans-serif;
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 28px;
+  }
 }
 
 .cluster-short-desc {
   font-family: $font-family-sans-serif-alt;
   font-size: 13px;
   line-height: 18px;
+  height: 200px;
 }
 
 .cluster-short-inline-list {
   font-family: $font-family-sans-serif-alt;
   font-size: 13px;
   line-height: 18px;
-  padding: 10px 0 0 0;
+  padding: 10px 0 0;
 
   dt {
     font-weight: 500;
@@ -98,7 +103,7 @@
     font-weight: 500px;
     width: 140px;
     display: inline-block;
-    padding: 9px 12px;
+    padding: 10px 14px;
     margin: 20px 10px 0 0;
     text-align: left;
     text-transform: capitalize;
